links instead buttons

--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -67,9 +67,9 @@
                                 <small>({% trans %}Gross{% endtrans %})</small> <span class="line-item--total-gross-price"></span>
                             </td>
                             <td>
-                                <button class="btn btn-danger btn-remove-line-item">
+                                <a href="#" class="btn btn-danger btn-remove-line-item">
                                     <i class="fa fa-remove"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                         {% endfor %}
@@ -89,9 +89,9 @@
                                 <small>({% trans %}Gross{% endtrans %})</small> <span class="line-item--total-gross-price"></span>
                             </td>
                             <td>
-                                <button class="btn btn-danger btn-remove-line-item">
+                                <a href="#" class="btn btn-danger btn-remove-line-item">
                                     <i class="fa fa-remove"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                         </tbody>
