--- a/templates/offer/form.html.twig
+++ b/templates/offer/form.html.twig
@@ -65,9 +65,9 @@
                                     <small>({% trans %}Gross{% endtrans %})</small> <span class="item--total-gross-price"></span>
                                 </td>
                                 <td>
-                                    <button class="btn btn-danger btn-remove-item">
+                                    <a href="#" class="btn btn-danger btn-remove-item">
                                         <i class="fa fa-remove"></i>
-                                    </button>
+                                    </a>
                                 </td>
                             </tr>
                             {% endfor %}
@@ -87,9 +87,9 @@
                                     <small>({% trans %}Gross{% endtrans %})</small> <span class="item--total-gross-price"></span>
                                 </td>
                                 <td>
-                                    <button class="btn btn-danger btn-remove-item">
+                                    <a href="#" class="btn btn-danger btn-remove-item">
                                         <i class="fa fa-remove"></i>
-                                    </button>
+                                    </a>
                                 </td>
                             </tr>
                             </tbody>
