--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -214,7 +214,7 @@ mpdf-->
             <th>Pos.</th>
             <th>Beschreibung</th>
             <th class="number">Menge</th>
-            <th class="number">MwSt.</th>
+            <th class="number">MwSt.-Satz</th>
             <th class="number">Einzelpreis</th>
             <th class="number">Gesamtpreis</th>
         </tr>
