--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -12,7 +12,8 @@
                         <h3 class="card-title">Kennzahlen {{ currentCompany().name }}</h3>
                     </div>
                     <div class="card-body">
-                        <p>Umsatz (netto) der letzten 12 Monate: {{ salesLastYear | number_format }} €</p>
+                        <p>Umsatz (netto) der letzten 12 Monate: {{ netSalesLastYear | number_format }} €</p>
+                        <p>Umsatz (brutto) der letzten 12 Monate: {{ grossSalesLastYear | number_format }} €</p>
                         <p>Ausstehende Aufträge: {{ projectsActive }}</p>
                         <p>Auftragsvolumen in EUR: {{ projectVolume | number_format }} €</p>
                         <p>Auftragsreichweite: {{ projectRange }} Tage</p>
