add payment methods

--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -12,6 +12,7 @@
                 <div class="card-body">
                     {{ form_row(form.customer) }}
                     {{ form_row(form.country) }}
+                    {{ form_row(form.paymentMethod) }}
                 </div>
             </div>
         </div>
