--- a/templates/offer/form.html.twig
+++ b/templates/offer/form.html.twig
@@ -31,6 +31,7 @@
             <div class="card">
                 <div class="card-body">
                     {{ form_row(form.subject) }}
+                    {{ form_row(form.introText) }}
 
                     <div class="mb-3">
                         <table class="item-table table table-bordered table-striped table-hover">
