--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -183,6 +183,10 @@ mpdf-->
                             <h2>
                                 {{ offer.subject }}
                             </h2>
+
+                            <p>
+                                {{ offer.introText }}
+                            </p>
                         </td>
                         <td class="number">
                         </td>
