--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -185,8 +185,8 @@ mpdf-->
                             </h2>
 
                             {% if offer.introText %}
-                            <p>
-                                {{ offer.introText }}
+                            <p style="margin-top: 10mm">
+                                {{ offer.introText|nl2br }}
                             </p>
                             {% endif %}
                         </td>
