try padding instead margin

--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -180,7 +180,7 @@ mpdf-->
                 <table>
                     <tr>
                         <td>
-                            <h2 style="{% if offer.introText %}margin-bottom: 20mm{% endif %}">
+                            <h2 style="{% if offer.introText %}padding-bottom: 20mm{% endif %}">
                                 {{ offer.subject }}
                             </h2>
 
