--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -82,7 +82,7 @@
                                 <p class="text-muted text-smaller">{{ invoice.company.name }}{% if invoice.company.additionalName %} - {{ invoice.company.additionalName }}{% endif %} - {{ invoice.company.street }} - {{ invoice.company.zip }} {{ invoice.company.city }}</p>
                                 <br />
                                 <p>
-                                    {% if invoice.customer.name %}{{ invoice.customer.name }}<br />{% endif %}
+                                    {% if invoice.customer.name %}<strong>{{ invoice.customer.name }}</strong><br />{% endif %}
                                     {% if invoice.customer.additionalName %}{{ invoice.customer.additionalName }}<br />{% endif %}
                                     {% if invoice.customer.salutation %}{{ invoice.customer.salutation }} {{ invoice.customer.firstName }} {{ invoice.customer.lastName }}<br />{% endif %}
                                     {{ invoice.customer.street }}<br />
