--- a/templates/_partials/sidebar.html.twig
+++ b/templates/_partials/sidebar.html.twig
@@ -78,6 +78,15 @@
                         </p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a href="{{ path('app_vat_index') }}" class="nav-link {% if app.request.attributes.get('_route') matches '~^app_vat_~' %}active{% endif %}">
+                        <i class="nav-icon fa fa-money"></i>
+                        <p>
+                            {% trans %}Steuern{% endtrans %}
+                        </p>
+                    </a>
+                </li>
                 {% endif %}
 
                 <li class="nav-item has-treeview">
